--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,8 @@ deploy:
     github-token: $GITHUB_TOKEN
     local-dir: gh-pages
     keep-history: true
-    committer-from-gh: true
+    name: openEO CI
+    email: openeo.ci@uni-muenster.de
     on:
       tags: true
   - provider: pages
@@ -59,7 +60,8 @@ deploy:
     github-token: $GITHUB_TOKEN
     local-dir: gh-pages
     keep-history: true
-    committer-from-gh: true
+    name: openEO CI
+    email: openeo.ci@uni-muenster.de
     on:
       all_branches: true
       condition: $TRAVIS_BRANCH =~ ^(master|draft)$
