Fix subtype-schemas link

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_deploy:
 - |
   if [[ $TRAVIS_BRANCH == 'master' ]] ; then
     cp ../redoc.html index.html
+    cp ../subtype-schemas.json subtype-schemas.json
     cp -r ../assets assets
   fi
 - |
@@ -39,6 +40,7 @@ before_deploy:
     rm -rf draft
     mkdir -p draft
     cp ../redoc.html draft/index.html
+    cp ../subtype-schemas.json draft/subtype-schemas.json
     cp -r ../assets draft/assets
   fi
 - |
@@ -46,6 +48,7 @@ before_deploy:
     rm -rf $TRAVIS_TAG
     mkdir -p $TRAVIS_TAG
     cp ../redoc.html $TRAVIS_TAG/index.html
+    cp ../subtype-schemas.json $TRAVIS_TAG/subtype-schemas.json
     cp -r ../assets $TRAVIS_TAG/assets
   fi
 
