--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openeo/api",
-  "version": "1.0.0-draft",
+  "version": "1.0.0-rc.1",
   "author": "openEO Consortium",
   "license": "Apache-2.0",
   "description": "The openEO API specification.",
