Addressed review comments (should have been part of the prev. commit)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "openEO Consortium",
   "license": "Apache-2.0",
   "description": "The openEO API specification.",
-  "homepage": "http://openeo.org",
+  "homepage": "https://openeo.org",
   "bugs": {
     "url": "https://github.com/Open-EO/openeo-api/issues"
   },
