--- a/.spectral.yml
+++ b/.spectral.yml
@@ -4,12 +4,12 @@ extends: "spectral:oas"
 except:
   "openapi.yaml#/components/schemas/process_graph/example":
     - oas3-valid-schema-example
-  "openapi.yaml#/paths/~1processes/get/responses/200/content/application~1json/schema/example":
-    - oas3-valid-content-schema-example
-  "openapi.yaml#/paths/~1process_graphs/get/responses/200/content/application~1json/schema/example":
-    - oas3-valid-content-schema-example
-  "openapi.yaml#/paths/~1service_types/get/responses/200/content/application~1json/schema/example":
-    - oas3-valid-content-schema-example
+  "openapi.yaml#/paths/~1processes/get/responses/200/content/application~1json/example":
+    - oas3-valid-oas-content-example
+  "openapi.yaml#/paths/~1process_graphs/get/responses/200/content/application~1json/example":
+    - oas3-valid-oas-content-example
+  "openapi.yaml#/paths/~1service_types/get/responses/200/content/application~1json/example":
+    - oas3-valid-oas-content-example
 rules:
   # Ported from Spectral 4.0
   contact-properties: true
