`GET /service_types` and `GET /file_formats`: Allow full JSON Schema for parameters, instead of a very limited subset. Added descriptions for JSON Schema properties. Bug fixes.

--- a/.spectral.yml
+++ b/.spectral.yml
@@ -10,6 +10,8 @@ except:
     - oas3-valid-oas-content-example
   "openapi.yaml#/paths/~1service_types/get/responses/200/content/application~1json/example":
     - oas3-valid-oas-content-example
+  "openapi.yaml#/paths/~1file_formats/get/responses/200/content/application~1json/example":
+    - oas3-valid-oas-content-example
 rules:
   # Ported from Spectral 4.0
   contact-properties: true
