--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "url": "git+https://github.com/Open-EO/openeo-api.git"
   },
   "devDependencies": {
-    "@stoplight/spectral": "^5.3.0",
-    "redoc-cli": "^0.9.7"
+    "@stoplight/spectral": "5.3.0",
+    "redoc-cli": "^0.9.13"
   },
   "scripts": {
     "start": "redoc-cli serve openapi.yaml --watch --options.expandResponses \"200,201,202,203,204\" --options.pathInMiddlePanel true",
