First draft to unify /processes and /process_graphs #310

--- a/.spectral.yml
+++ b/.spectral.yml
@@ -6,7 +6,7 @@ except:
     - oas3-valid-schema-example
   "openapi.yaml#/paths/~1processes/get/responses/200/content/application~1json/example":
     - oas3-valid-oas-content-example
-  "openapi.yaml#/paths/~1process_graphs/get/responses/200/content/application~1json/example":
+  "openapi.yaml#/paths/~1processes~1{namespace}/get/responses/200/content/application~1json/example":
     - oas3-valid-oas-content-example
   "openapi.yaml#/paths/~1service_types/get/responses/200/content/application~1json/example":
     - oas3-valid-oas-content-example
@@ -17,6 +17,7 @@ rules:
   contact-properties: true
   tag-description: true
   oas3-parameter-description: true
+  operation-2xx-response: off # remove this line once /process_graphs/... endpoints have been removed
   operation-summary-formatted:
     description: Operation `summary` should start with upper case and not end with a dot.
     recommended: true
