--- a/.spectral.yml
+++ b/.spectral.yml
@@ -17,6 +17,8 @@ rules:
   contact-properties: true
   tag-description: true
   oas3-parameter-description: true
+  duplicated-entry-in-enum: false # Broken: https://github.com/stoplightio/spectral/issues/1571
+  oas3-unused-components-schema: false # Broken: https://github.com/stoplightio/spectral/issues/1271
   operation-summary-formatted:
     description: Operation `summary` should start with upper case and not end with a dot.
     recommended: true
@@ -33,5 +35,5 @@ rules:
     given: "$"
     then:
       function: pattern
-      functionOptions:  # this object be passed down as options to the custom function
+      functionOptions:
         match: ^[a-z][a-z0-9\-]*$
