Clean-up CI while broken in Spectral
https://github.com/stoplightio/spectral/issues/1571
https://github.com/stoplightio/spectral/issues/1271

--- a/.spectral.yml
+++ b/.spectral.yml
@@ -17,6 +17,23 @@ rules:
   contact-properties: true
   tag-description: true
   oas3-parameter-description: true
+  duplicated-entry-in-enum: # Broken: https://github.com/stoplightio/spectral/issues/1571
+    description: Enum values should not have duplicate entry.
+    type: validation
+    severity: warn
+    recommended: true
+    message: 'A duplicated entry in the enum was found. Error: {{error}}'
+    given: "$..enum"
+    then:
+      function: schema
+      functionOptions:
+        schema:
+          oneOf:
+            - type: array
+              uniqueItems: true
+            - not:
+                type: array
+  oas3-unused-components-schema: false # Broken: https://github.com/stoplightio/spectral/issues/1271
   operation-summary-formatted:
     description: Operation `summary` should start with upper case and not end with a dot.
     recommended: true
@@ -33,5 +50,5 @@ rules:
     given: "$"
     then:
       function: pattern
-      functionOptions:  # this object be passed down as options to the custom function
+      functionOptions:
         match: ^[a-z][a-z0-9\-]*$
