Upgrade to Spectral v6

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "url": "git+https://github.com/Open-EO/openeo-api.git"
   },
   "devDependencies": {
-    "@stoplight/spectral": "^5.9.1",
-    "redoc-cli": "0.10.1"
+    "@stoplight/spectral-cli": "^6.1.0",
+    "redoc-cli": "^0.13.1"
   },
   "scripts": {
     "start": "redoc-cli serve openapi.yaml --watch --options.expandResponses \"200,201,202,203,204\" --options.pathInMiddlePanel true",
