Update redoc-cli + CI

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@stoplight/spectral": "^5.9.1",
-    "redoc-cli": "0.10.1"
+    "redoc-cli": "^0.13.18"
   },
   "scripts": {
     "start": "redoc-cli serve openapi.yaml --watch --options.expandResponses \"200,201,202,203,204\" --options.pathInMiddlePanel true",
