Enable rule again

--- a/.spectral.yml
+++ b/.spectral.yml
@@ -6,7 +6,7 @@ except:
 rules:
   contact-properties: true
   tag-description: true
-# oas3-parameter-description: true # Broken: https://github.com/stoplightio/spectral/issues/1971
+  oas3-parameter-description: true
   oas3-unused-component: false # Broken: https://github.com/stoplightio/spectral/issues/1271
   operation-summary-formatted:
     description: Operation `summary` should start with upper case and not end with a dot.
