--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/Open-EO/openeo-api.git"
   },
   "devDependencies": {
-    "@stoplight/spectral": "^5.9.1",
+    "@stoplight/spectral-cli": "^6.6.0",
     "redoc-cli": "^0.13.18"
   },
   "scripts": {
