--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - name: Inject env variables
         uses: rlespinasse/github-slug-action@v3.x
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16'
-      - uses: actions/checkout@v2
+          node-version: 'lts/*'
+      - uses: actions/checkout@v3
       - run: |
           npm install
           npm run build
