--- a/extensions/commercial-data/package.json
+++ b/extensions/commercial-data/package.json
@@ -13,12 +13,12 @@
     "url": "git+https://github.com/Open-EO/openeo-api.git"
   },
   "devDependencies": {
-    "@stoplight/spectral": "^5.9.1",
-    "redoc-cli": "^0.13.18"
+    "@stoplight/spectral": "^6.6.0",
+    "redoc-cli": "^0.13.21"
   },
   "scripts": {
     "start": "redoc-cli serve openapi.yaml --watch --options.expandResponses \"200,201,202,203,204\" --options.pathInMiddlePanel true",
-    "build": "redoc-cli bundle openapi.yaml -o redoc.html --title \"openEO API\" --cdn --options.expandResponses \"200,201,202,203,204\" --options.pathInMiddlePanel true",
+    "build": "redoc-cli bundle openapi.yaml -o redoc.html --title \"openEO API - Commercial Data Extension\" --cdn --options.expandResponses \"200,201,202,203,204\" --options.pathInMiddlePanel true",
     "test": "spectral lint openapi.yaml"
   }
 }
