--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,3 +17,8 @@ jobs:
           cd extensions/commercial-data
           npm install
           npm test
+      - name: Run workspaces tests
+        run: |
+          cd extensions/workspaces
+          npm install
+          npm test
