Enable tests for commercial data extension

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,12 @@ jobs:
         with:
           node-version: 'lts/*'
       - uses: actions/checkout@v3
-      - name: Run tests
+      - name: Run core tests
         run: |
+          npm install
+          npm test
+      - name: Run commercial-data tests
+        run: |
+          cd extensions/commercial-data
           npm install
           npm test
