--- a/.spectral.yml
+++ b/.spectral.yml
@@ -8,6 +8,7 @@ rules:
   tag-description: true
   oas3-parameter-description: true
   oas3-unused-component: false # Broken: https://github.com/stoplightio/spectral/issues/1271
+  array-items: false
   operation-summary-formatted:
     description: Operation `summary` should start with upper case and not end with a dot.
     given: '$.paths.*[?( @property === ''get'' || @property === ''put'' || @property === ''post'' || @property === ''delete'' || @property === ''options'' || @property === ''head'' || @property === ''patch'' || @property === ''trace'' )]'
